--- a/server/public/style_sheet/stylesheet.css
+++ b/server/public/style_sheet/stylesheet.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@400;700&display=swap');
+
 *,*::before,*::after{
     margin: 0;
     padding: 0;
@@ -15,16 +17,16 @@
 }
 
 .row{
+    margin: 1.5rem 0;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
     
 }
 
 /* =======================
     header section
 =========================*/
-
-
 
 
 .title {
@@ -43,11 +45,29 @@
 /* ====================
     form section
 =======================*/
+
 input {
-    width: 111px;
+    font-size:2.5rem;
+    text-align: right;
+    font-family: 'Smooch Sans', sans-serif;
+    background-color: black;
+    color: green ;
+    width: 195px;
+    height: 75px;
 }
 button{
-    padding: .1em 1em
+    font-size: 1rem;
+    padding: .3em 1em;
+    border-radius: 60px;
+}
+
+form{
+    height: 342px;
+    width: 300px;
+    margin: 0 auto;
+    border: 1px solid black;
+    border-radius: .5rem;
+    
 }
 
 /* ====================
